Gutenberg: Fix layout issues with "Select From Drive" button.
See #26.

--- a/assets/block.css
+++ b/assets/block.css
@@ -1,8 +1,16 @@
+.wp-block-ray-google-drive.components-placeholder {
+	padding-bottom: 5em;
+}
+
+.wp-block-ray-google-drive input[type="text"] {
+	width: 288px;
+}
+
 .mexp-gdrive-gutenberg {
 	background: transparent;
 	border: 0;
-	margin-top: -3.5em;
-	padding-bottom: 1.5em;
+	margin-top: -60px;
+	height: 60px;
 	position: relative;
 	text-align: center;
 	z-index: 99989;
